Update essasy6 htlm 2.html

--- a/essasy6 htlm 2.html
+++ b/essasy6 htlm 2.html
@@ -110,7 +110,7 @@ nav ul {
             Which would perform exactly the same. Compaq would go on to create more versions of their compaq and other computers.
 
 </p>
-        <center><img src="K:\untitled folder\02101.jpg"style="display: block; margin:o auto" ;alt="alt text" width="300"; height="200"  ;align="center" ></center>
+        <center><img src="html-project/Html Project 1/02101.jpg"style="display: block; margin:o auto" ;alt="alt text" width="300"; height="200"  ;align="center" ></center>
 
         
         <p>
