--- a/essasy6 htlm 2.html
+++ b/essasy6 htlm 2.html
@@ -110,7 +110,7 @@ nav ul {
             Which would perform exactly the same. Compaq would go on to create more versions of their compaq and other computers.
 
 </p>
-        <center><img src="https://github.com/keegenthompson/html-project/blob/gh-pages/Html%20Project%201/02101.jpg"style="display: block; margin:o auto" ;alt="alt text" width="300"; height="200"  ;align="center" ></center>
+        <center><img src="https://github.com/keegenthompson/html-project/blob/gh-pages/Html%20Project%201/02101.jpg?raw=true"style="display: block; margin:o auto" ;alt="alt text" width="300"; height="200"  ;align="center" ></center>
 
         
         <p>
