--- a/Html Project 1/project resources.html
+++ b/Html Project 1/project resources.html
@@ -11,7 +11,7 @@
 </style>
 
 </head>
-<body background="K:\untitled folder\old-pc.gif" backgroun="color:#cccccc">
+<body background="html project 1/old-pc.gif" backgroun="color:#cccccc">
 
 <article>
     <center><h2 style="font-family: FreesiaUPC; font: 500%/.5 arial">Internet resources</h2></center>
